feat: Full Stack Class Codes

--- a/HTML/link.html
+++ b/HTML/link.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+    <title>links</title>
 </head>
 <body bgcolor="#11aa11">
-    <h1><a href="login.html" target="right">Login</a><br/>
+    <h2><a href="login.html" target="right">LOGIN</a><br/>
     <a href="register.html" target="right">Register</a><br/>
-    <a href="https://www.javatpoint.com" target="right">Javatpoint</a><br/></h1>
+    <a href="https://www.javatpoint.com" target="right">JAVATPOINT</a><br/>    
+    </h2>
+    
 </body>
 </html>
