--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -6,6 +6,6 @@
     <title>Footer</title>
 </head>
 <body bgcolor="cyan">
-    <h2><center>Design and Developed by &copy; FSD TEAM</center></h2>
+    <h2><center>Design and Developed by &copy; FSD Team</center></h2>  
 </body>
 </html>
