--- a/HTML/header.html
+++ b/HTML/header.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
+    <title>header</title>
 </head>
 <body bgcolor="yellow">
-    <h1><center>ABES Engineering College</center></h1>
+    <h1><center>ABES ENGINEERING COLLEGE</center></h1>
 </body>
 </html>
